# OperacjeMorfologiczne

./: AppManager.cpp  AppManager.h  BottomHat.cpp  BottomHat.h  CMakeLists.txt  Closure.cpp  Closure.h  Dilatation.cpp  Dilatation.h  Erosion.cpp  Erosion.h  ImageOperator.cpp  ImageOperator.h  ImageProcesser.cpp  ImageProcesser.h  InputImage.cpp  InputImage.h  Opening.cpp  Opening.h  SaveImage.cpp  SaveImage.h  TopHat.cpp  TopHat.h  main.cpp
